# cuda_test

./: CMakeLists.txt
src/: gpu.cpp  gpu.hpp  kernel.cu  kernel.cuh  main.cpp
